MedHeadBackEnd/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: "medhead"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medhead
  template:
    metadata:
      labels:
        app: medhead
    spec :
      containers:
        - name: medhead-back
          image: medheadback:0.0.1
          ports:
            - containerPort: 8081
