MedHeadBackEnd/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: "medhead"
spec:
  selector:
    app: medhead
  ports:
    - protocol: TCP
      port: 8081
