MedHeadBackEnd/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: "medhead"
spec:
  ingressClassName: nginx
  rules:
    - host: backend.medhead.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8081
